fixed the spacing on mobile photo

--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -113,7 +113,7 @@
         width: 7rem;
         padding: 0.2rem;
         margin-left: 10rem;
-        margin-top: -6rem;
+        margin-top: -5rem;
         border-top-left-radius: 30%;
         border-bottom-right-radius: 10%;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 1.5);
